# ayah-a-day

./: .gitignore  CLAUDE.md  README.md  SIMPLE_SETUP.md  simple_app.py
archive/complex_version/: .env.example  DEPLOYMENT.md  Dockerfile  docker-compose.yml  pyproject.toml  setup.py
archive/complex_version/config/: settings.py
archive/complex_version/src/ayah_app/: __init__.py  app.py  cli.py  data_loader.py  email_system.py  html_generator.py  logger.py  verse_selector.py
archive/complex_version/static/js/: app.js
archive/complex_version/tests/: conftest.py  test_data_loader.py  test_flask_app.py
data/: en-taqi-usmani-simple.json
outputs/: ayah-of-the-day.html
scripts/: ayah-a-day.py  test.py
