[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ayah-app"
version = "1.0.0"
description = "A web application for daily Quran verses with translations and Tafsir"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["quran", "islamic", "verses", "web-app"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Religion",
]

dependencies = [
    "flask>=2.3.0",
    "flask-mail>=0.9.1",
    "flask-cors>=4.0.0",
    "apscheduler>=3.10.0",
    "jsonschema>=4.17.0",
    "pydantic>=1.10.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=20.1.0",
    "redis>=4.5.0",
    "celery>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.0.260",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-flask>=1.2.0",
]

[project.scripts]
ayah-app = "ayah_app.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/ayah-app"
Repository = "https://github.com/yourusername/ayah-app.git"
Issues = "https://github.com/yourusername/ayah-app/issues"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=ayah_app --cov-report=html --cov-report=term-missing"